Add command to plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,7 @@ main: com.me.tft_02.ghosts.Ghosts
 description: Death is only the beginning!
 dev-url: http://dev.bukkit.org/server-mods/ghosts/
 version: ${project.version}-b${BUILD_NUMBER}
+commands:
+   ghosts:
+      description: Usage /ghosts
+      permission-message: You don't have <permission>
