Ghosts can double jump

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -54,6 +54,12 @@ Respawn:
     Explosion_Trail: false
     Explosion_On_Impact: false
 
+Ghost:
+    Double_Jump:
+        Enabled: true
+        Sound: true
+        Effect: true
+
 Misc:
     Date_Format: MM/dd/yyyy
     Time_Format: hh:mm a
