--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -65,6 +65,7 @@ permissions:
             ghosts.quickloot: true
             ghosts.largechest: true
             ghosts.sign: true
+            ghosts.doublejump: true
             ghosts.commands.defaults: true
     ghosts.defaultsop:
         description: Implies all default op ghosts permissions.
