--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
+    <distributionManagement>
+        <repository>
+            <id>Ghosts-repo</id>
+            <url>http://jenkins.genesis-mc.com/plugin/repository/project/Ghosts/</url>
+        </repository>
+    </distributionManagement>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
