Added new item; Scroll of Resurrection

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -58,6 +58,14 @@ Ghost:
     Potion_Effects:
         - SWIFTNESS
 
+Items:
+Resurrection_Scroll:
+    Use_Cost: 1
+    Item_Name: PAPER
+
+    IngredientEdges: PAPER
+    IngredientMiddle: GLOWSTONE_DUST
+
 Misc:
     Date_Format: MM/dd/yyyy
     Time_Format: hh:mm a
