--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -69,6 +69,8 @@ permissions:
             ghosts.sign: true
             ghosts.doublejump: true
             ghosts.commands.defaults: true
+            ghosts.items.ressurectscroll: true
+            ghosts.items.ressurectscroll.others: true
     ghosts.defaultsop:
         description: Implies all default op ghosts permissions.
         children:
@@ -84,6 +86,10 @@ permissions:
          description: Allows access to use large chests.
     ghosts.sign:
          description: Allows access to use signs.
+    ghosts.items.ressurectscroll:
+         description: Allows use of Scroll of Ressurect.
+    ghosts.items.ressurectscroll.others:
+         description: Allows use of Scroll of Ressurect on other players.
     ghosts.freechest:
          default: false
          description: Allows access to use free chests.
