--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ author: TfT_02
 main: com.me.tft_02.ghosts.Ghosts
 website: http://dev.bukkit.org/server-mods/ghosts/
 
+softdepend: [mcMMO]
 load: POSTWORLD
 
 commands:
