Working Vanilla XP loss and recovery handling!

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -45,9 +45,11 @@ Tombstones:
 
     # Percentage amount of XP that is lost upon death. (10% default)
     # Vanilla_XP: for vanilla Minecraft experience orbs/levels
+    # Override_KeepLevel: Make sure experience is handled by Ghosts and not by another plugin
     # Items: Percentage of items stored in a tombstone (100% default)
     Losses:
         Vanilla_XP: 10
+        Override_KeepLevel: true
         Items: 100
 
     # When finding a tomb or using scrolls, how much of the lost
@@ -118,6 +120,7 @@ Items:
 
         IngredientEdges: PAPER
         IngredientMiddle: GLOWSTONE_DUST
+        IngredientUpgrade: DIAMOND
 
 Misc:
     Date_Format: MM/dd/yyyy
