--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.me.tft_02.ghosts</groupId>
 	<artifactId>Ghosts</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>Ghosts</name>
 	<url>https://github.com/TfT-02/Ghosts</url>
 	<issueManagement>
