--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,6 +10,9 @@
 General:
     Locale: en_US
 
+    # Send a message to the player when his profile was successfully loaded
+    Show_Profile_Loaded: false
+
     # Amount of time (in minutes) to wait between saves of player information
     Save_Interval: 10
 
