--- a/pom.xml
+++ b/pom.xml
@@ -89,14 +89,14 @@
 			<artifactId>bukkit</artifactId>
 			<version>LATEST</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
         <dependency>
             <groupId>com.gmail.nossr50.mcMMO</groupId>
             <artifactId>mcMMO</artifactId>
             <version>1.5.01-SNAPSHOT</version>
             <type>jar</type>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 		<dependency>
 			<groupId>org.mcstats.bukkit</groupId>
