--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,11 @@
             <id>md_5-repo</id>
             <url>http://repo.md-5.net/</url>
         </repository>
-		<repository>
+        <repository>
+            <id>heroes-repo</id>
+            <url>http://nexus.theyeticave.net/content/groups/public</url>
+        </repository>
+        <repository>
 			<id>Plugin Metrics</id>
 			<url>http://repo.mcstats.org/content/repositories/public</url>
 		</repository>
@@ -95,6 +99,13 @@
             <groupId>com.gmail.nossr50.mcMMO</groupId>
             <artifactId>mcMMO</artifactId>
             <version>1.5.01-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.herocraftonline</groupId>
+            <artifactId>Heroes</artifactId>
+            <version>LATEST</version>
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
