--- a/pom.xml
+++ b/pom.xml
@@ -118,9 +118,13 @@
 	</dependencies>
     <distributionManagement>
         <repository>
-            <id>Ghosts-repo</id>
-            <url>file:///var/lib/jenkins/repo</url>
+            <id>md_5-releases</id>
+            <url>http://repo.md-5.net/content/repositories/releases/</url>
         </repository>
+        <snapshotRepository>
+            <id>md_5-snapshots</id>
+            <url>http://repo.md-5.net/content/repositories/snapshots/</url>
+        </snapshotRepository>
     </distributionManagement>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
