--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -48,7 +48,7 @@ Tombstones:
         # Message which will be put on the sign, new lines get split at |
         # {name} : Player name, {date} : current date, {time} : current time
         # 4 lines limit, 15 characters max
-        Sign_Message: {name}|RIP|{date}|{time}
+        Sign_Message: '{name}|RIP|{date}|{time}'
 
     # Vanilla_XP: Percentage amount of vanilla Minecraft experience orbs/levels that is lost upon death. (40% default)
     # Override_KeepLevel: Make sure experience is handled by Ghosts and not by another plugin
